Development Portal (2016-11-17 shi)
==============================
Added feedback links for search section
Updated styles and font sizes for data descriptions
Added translations for new sections
Added dropmenu on search view
Fixed dropmenu width issues
Adjusted image brightness on search view
Added Generator banner to search view
Updated missing view header text
Added sorting icons to publishers view
Updated styles for data quality page


Development Portal (2016-11-16 shi)
==============================
Fixed transaction links colours in all states for SAVi
Updated style for reporting-org in SAVi
Updated table styles for budgets and transactions in SAVi
Fixed hover state for last column in money table
Added sorting icons for money table
Fixed money table colours
Removed {table_declare} from money table views
Adding index bits to search view


Development Portal (2016-11-08 shi)
==============================
Colour change for reporting-org in SAVi
Links colours update


Development Portal (2016-10-29 shi)
==============================
Added depth to colour labels in SAVi


Development Portal (2016-10-27 shi)
==============================
Updated styles for SAVi
Layout and font size fixes for SAVi


Development Portal (2016-10-26 shi)
==============================
Fixed margins for Search box
Restyled Search page, layout and font stylings
Fixed max and min main pages for Search
Added icons to results page
Added DISCOVER branding to main pages and results page
Fixed translations for DISCOVER


Development Portal (2016-09-01 shi)
==============================
Added maximum width for table titles (activity, list) for large numbers


Development Portal (2016-06-23 shi)
==============================
Clean up Tips section
Remove email contact
Added vimeo video
Minor CSS changes
Changed text on Discover button
Updated footer links sitewide, includes translations
Updated hover states of graphs for publisher and recipient pages