@@ -37,19 +37,27 @@ span.span_span-title span-title:before	{content:"PROJECT TITLE"; font-size:14px;
 
 /*	IATI Identifier
 	============================================= */
-iati-identifier 		{display:block; background-color:#000; text-align:center; font-size:1.0em; line-height:1.5em; padding:15px 40px; color:#fff; margin:0 auto;}
-iati-identifier:before	{content:"IATI IDENTIFIER"; font-size:14px; color:#fff; display:inline-block; vertical-align:bottom; padding-right:5px;}
-iati-identifier:hover	{color:#fff;}
-iati-identifier a:focus		{color:#fff;}
-iati-identifier a:link  	{color:#fff;}
-iati-identifier a:visited	{color:#fff;}
-iati-identifier a:hover		{color:#fff;}
-iati-identifier a:active	{color:#fff;}
-a.a_iati-identifier		{width:958px; margin:0 auto; vertical-align:bottom;}
-a.a_xml_iati-identifier	{display:inline-block; vertical-align:bottom; padding-left:20px; color:#fff;}
-a.a_xml_iati-identifier:before	{content:"VIEW SOURCE"; font-size:14px; color:#fff; display:inline-block; vertical-align:bottom; padding-right:10px;}
-a.a_slug				{display:inline-block; vertical-align:baseline; padding-left:20px;}
-a.a_slug:before			{content:"IATI REGISTRY"; font-size:14px; color:#FFF; display:inline-block; vertical-align:baseline; padding-right:10px;}
+iati-identifier 		{display:block; width:880px; font-size:20px; line-height:1.5em; padding:15px 40px; color:#000; margin:0 auto; border-top:1px solid #000; border-bottom:1px solid #000;}
+iati-identifier:before	{content:"IATI IDENTIFIER"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:5px;}
+iati-identifier:hover	{color:#000;}
+iati-identifier a:focus		{color:#000;}
+iati-identifier a:link  	{color:#000;}
+iati-identifier a:visited	{color:#000;}
+iati-identifier a:hover		{color:#000;}
+iati-identifier a:active	{color:#000;}
+a.a_iati-identifier		{width:958px; margin:0 auto; vertical-align:baseline;}
+a.a_xml_iati-identifier	{display:inline-block; vertical-align:baseline; color:#000; width:50%;}
+a.a_xml_iati-identifier:before	{content:"VIEW SOURCE"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:10px;}
+a.a_xml_iati-identifier:link	{color:#000;}
+a.a_xml_iati-identifier:visited	{color:#000;}
+a.a_xml_iati-identifier:hover	{color:#000; text-decoration:underline;}
+a.a_xml_iati-identifier:active	{color:#000;}
+a.a_slug				{display:inline-block; vertical-align:baseline; width:50%; text-align:right;}
+a.a_slug:before			{content:"VIEW IATI REGISTRY"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:10px;}
+a.a_slug:link			{color:#000;}
+a.a_slug:visited		{color:#000;}
+a.a_slug:hover			{color:#000; text-decoration:underline;}
+a.a_slug:active			{color:#000;}
 
 
 /*	Recipient countries
@@ -64,19 +72,19 @@ recipient-country span:nth-of-type(2)	{font-size:20px; color:#000; padding-top:1
 
 /*	Start and End dates
 	============================================= */
-span.span_activity-date				{display:block; vertical-align:bottom; width:958px; background-color:#000;}
+span.span_activity-date				{display:block; vertical-align:bottom; width:958px; border-top:1px solid #000; border-bottom:1px solid #000;}
 activity-date[type="start-planned"]	{display:none;}
 activity-date[type="end-planned"]	{display:none;}
-activity-date[type="start-actual"]	{font-size:1.0em; display:table-cell; vertical-align:bottom; padding:10px 40px; color:#fff; width:480px;}
-activity-date[type="end-actual"]	{font-size:1.0em; display:table-cell; vertical-align:bottom; padding:10px 40px; color:#fff; width:480px; text-align:right;}
-activity-date[type="start-actual"]:before	{content:"START DATE"; font-size:14px; color:#fff; display:inline-block; vertical-align:bottom; padding-right:10px;}
-activity-date[type="end-actual"]:before		{content:"END DATE"; font-size:14px; color:#fff; display:inline-block; vertical-align:bottom; padding-right:10px;}
+activity-date[type="start-actual"]	{font-size:1.0em; display:table-cell; vertical-align:bottom; padding:10px 40px; color:#000; width:480px;}
+activity-date[type="end-actual"]	{font-size:1.0em; display:table-cell; vertical-align:bottom; padding:10px 40px; color:#000; width:480px; text-align:right;}
+activity-date[type="start-actual"]:before	{content:"START DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:bottom; padding-right:10px;}
+activity-date[type="end-actual"]:before		{content:"END DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:bottom; padding-right:10px;}
 
 
 /*	Who's invloved?
 	============================================= */
 span.span_participating-org				{display:block; width:880px; padding:40px 40px 10px 40px; font-size:18px; color:#000; counter-reset:section;}
-span.span_participating-org:before 		{content:"Who's involved?"; font-size:34px; color:#000; display:block; padding-bottom:10px; margin-bottom:20px; border-bottom:5px solid #000;}
+span.span_participating-org:before 		{content:"WHO'S INVOLVED?"; font-size:14px; color:#000; display:block; margin-bottom:20px;}
 participating-org::before				{counter-increment:section; content:counter(section) ". ";}
 participating-org 						{display:block; list-style-position:inside; list-style-type:decimal; padding:10px 0;}
 participating-org[role="funding"]:after			{content:"FUNDING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
@@ -163,7 +171,7 @@ img.sector_pie					{padding:40px 20px;}
 budget	{display:block; width:958px; border-top:1px solid #000; padding:20px 0; border-bottom:0;}
 budget:last-of-type	  {border-bottom:0px solid #000;}
 budget:nth-of-type(1) {margin-top:0px; padding-top:0;}
-budget:nth-of-type(1):before {content:"Budgets"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
+budget:nth-of-type(1):before {content:"Budgets"; font-size:26px; color:#000; border-bottom:1px solid #000; display:block; padding:20px 40px; margin-bottom:25px;}
 budget:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) period-end:before	  {content:"END DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) value:before		  {content:"VALUE"; font-size:14px; color:#000; width:300px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
@@ -179,7 +187,7 @@ transaction a						{color:#000;}
 transaction a:hover					{color:#000;}
 transaction:last-of-type			{border-bottom:1px solid #000;}
 transaction:nth-of-type(1)			{margin-top:0px; padding-top:0;}
-transaction:nth-of-type(1):before	{content:"Transactions"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
+transaction:nth-of-type(1):before	{content:"Transactions"; font-size:26px; color:#000; border-bottom:1px solid #000; display:block; padding:20px 40px; margin-bottom:25px;}
 
 transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#000; width:105px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#000; width:144px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
