@@ -133,7 +133,7 @@ a.path:hover			{background-color:rgba(0,14,32,0.9);}
 
 /*	Text and Description styles - INDEX PAGE
 	============================================= */
-.description_splash		{width:960px; margin:0 auto; padding:0px; box-sizing:border-box; text-align:left;}
+.description_splash		{width:960px; margin:0 auto; padding:0px; box-sizing:border-box; text-align:left; padding-bottom:10px;}
 .description_splash .description span.title	{margin:0;}
 .description_splash .description p			{padding:15px 0; font-size:1.2em; color:#fff; line-height:1.2em; word-spacing:0.07em;}
 
@@ -244,7 +244,7 @@ a.stats_link.missing span	{color:#008FFF;}
 /*	Data Description styles
 	============================================= */
 .description_wrap		{width:100%; margin:0 auto; background:linear-gradient(to bottom, rgba(0,14,32,0) 0%,rgba(0,14,32,0.5) 60%,rgba(0,14,32,0.9) 100%); background:-prefix-linear-gradient(to bottom, rgba(0,14,32,0) 0%,rgba(0,14,32,0.5) 60%,rgba(0,14,32,0.9) 100%); padding-bottom:40px;}
-.description			{width:880px; margin:0 auto; padding:40px; text-align:left; margin-bottom:40px; margin-top:20px; padding-top:20px; background-color:rgba(0,14,32,0.7);}
+.description			{width:880px; margin:0 auto; padding:40px; text-align:left; margin-bottom:40px; margin-top:20px; padding-top:20px; background-color:rgba(255,255,255,0.1);}
 .description span.title	{display:block; color:#FFF; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-bottom:1px solid #FFF;}
 .description span.title.sub	{font-size:20px; border:0; margin:0; padding-bottom:5px; font-style:italic;}
 .description p			{padding:15px 0; font-size:19px; color:#fff; line-height:24px; word-spacing:0.07em;}
@@ -553,5 +553,6 @@ a.beige:hover			{color:#FFF;}
 @keyframes spin {from {transform: rotate(0deg);} to {transform: rotate(359deg);}}
 
 
-.nanobar{width:100%;height:8px;z-index:9999;top:0}.bar{width:0;height:100%;transition:height .3s;background:#08f}
+.nanobar{width:100%; height:8px; z-index:9999; top:0;}
+.bar	{width:0; height:100%; transition:height .3s; background:#08f;}
 
