@@ -3,7 +3,7 @@
 
 #view_data_quality
 {view_head}
-<style>{css}</style>
+<style>.description{background-color:rgba(0,14,32,0.7);}{css}</style>
 {beige}
 {main_head}
 {main_min}
