@@ -1,3 +1,11 @@
+Development Portal (2016-11-18 shi)
+==============================
+Fixed identifier section in SAVi for longer ids
+Minor fixes for Firefox rendering
+Updated Print-friendly version for SAVi
+Added loading nanobar for Print-friendly
+
+
 Development Portal (2016-11-17 shi)
 ==============================
 Added feedback links for search section
